# 1-2025

./: Billetera Catacora.cpp  README.md
0. 📚 Bibliografia/: readme.md
0. 📚 Bibliografia/3. 💻 Programacion Estrcturada/3. Ejercicios - Vectores 1/: ejerciciovectores.cpp
0. 📚 Bibliografia/3. 💻 Programacion Estrcturada/4. Ejercicios - Vectores 2/: ejerciciovectores2 - copia.cpp  ejerciciovectores2.cpp
2. Segundo Practico/src/: practico_2_ejercicios.cpp
2. Segundo Practico/tests/: practico_2_ejercicio_12_test.cpp  practico_2_ejercicio_16_test.cpp  practico_2_ejercicio_18_19_test.cpp  practico_2_ejercicio_1_test.cpp
2. ✏️ Segundo Practico/src/: CMakeLists.txt  practico_2_ejercicios.cpp
2. ✏️ Segundo Practico/tests/: CMakeLists.txt  practico_2_ejercicio_17_test.cpp
Practico 2/include/: practico_2_ejercicios.h
Practico 2/src/: main.cpp  practico_2_ejercicios.cpp
Practico 2/tests/: practico_2_ejercicio_13_test.cpp  practico_2_ejercicio_14_test.cpp  practico_2_ejercicio_15_test.cpp  practico_2_ejercicio_2_test.cpp  practico_2_ejercicio_3_test.cpp  practico_2_ejercicio_4_test.cpp  practico_2_ejercicio_5_test.cpp  practico_2_ejercicio_7_test.cpp  practico_2_ejercicio_8_test.cpp  practico_2_ejercicio_9_test.cpp
[SCZ] [1-2025] [IMT-141] Introduccion a la Mecatronica/Práctico de Piezas básicas/: Pieza 10.SLDPRT  Pieza 11.SLDPRT  Pieza 12.SLDPRT  Pieza 15.SLDPRT  Pieza 16.SLDPRT  Pieza 18.SLDPRT  Pieza 19.SLDPRT  Pieza 2.SLDPRT  Pieza 21.SLDPRT  Pieza 22.SLDPRT  Pieza 23.SLDPRT  Pieza 24.SLDPRT  Pieza 27.SLDPRT  Pieza 28.SLDPRT  Pieza 3.SLDPRT  Pieza 30.SLDPRT  Pieza 31.SLDPRT  Pieza 32.SLDPRT  Pieza 33.SLDPRT  Pieza 34.SLDPRT  Pieza 35.SLDPRT  Pieza 36.SLDPRT  Pieza 38.SLDPRT  Pieza 39.SLDPRT  Pieza 4.SLDPRT  Pieza 40.SLDPRT  Pieza 46.SLDPRT  Pieza 47.SLDPRT  Pieza 48.SLDPRT  Pieza 49.SLDPRT  Pieza 6.SLDPRT  Pieza 8.SLDPRT
[SCZ] [1-I2025] [SIS-111] Introduccion A La Programacion/0. 📚 Bibliografia/3. 💻 Programacion Estrcturada/2. Ejercicio resuelto funciones/: ejerciciofuncioanes.cpp
[SCZ] [1-I2025] [SIS-111] Introduccion A La Programacion/2. ✏️ Segundo Practico/tests/: practico_2_ejercicio_10_test.cpp
🏫 UCB/[SCZ] [1-2025] [IMT-141] Introduccion a la Mecatronica/Práctico de Piezas básicas/: Pieza 1.SLDPRT  Pieza 13.SLDPRT  Pieza 14.SLDPRT  Pieza 17.SLDPRT  Pieza 20.SLDPRT  Pieza 25.SLDPRT  Pieza 26.SLDPRT  Pieza 29.SLDPRT  Pieza 37.SLDPRT  Pieza 41.SLDPRT  Pieza 42.SLDPRT  Pieza 43.SLDPRT  Pieza 44.SLDPRT  Pieza 45.SLDPRT  Pieza 5.SLDPRT  Pieza 50.SLDPRT  Pieza 7.SLDPRT  Pieza 9.SLDPRT
🏫 UCB/[SCZ] [1-2025] [ISW-111] Fundamentos en Ingenieria de Software/: readme.md
🏫 UCB/[SCZ] [1-I2025] [SIS-111] Introduccion A La Programacion/2. ✏️ Segundo Practico/src/: practico_2_ejercicios.cpp
🏫 UCB/[SCZ] [1-I2025] [SIS-111] Introduccion A La Programacion/2. ✏️ Segundo Practico/tests/: practico_2_ejercicio_11_test.cpp  practico_2_ejercicio_6_test.cpp
🏫 UCB/[SCZ] [1-I2025] [SIS-111] Introduccion A La Programacion/Segunda Competencia - Examen Recuperatorio /: SCE - E2 (original).cpp  readme.md
